<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_calculator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end"
        android:textSize="@dimen/sp_30"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_result"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end"
        android:text="0.0"
        android:textSize="@dimen/sp_30"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_calculator"
        android:onClick="showResult"/>

    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_Clr"
        app:layout_constraintBottom_toTopOf="@id/button_seven"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clear"/>

    <Button
        android:id="@+id/button_div"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_div"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_clear"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="operatorEvent"/>

    <Button
        android:id="@+id/button_mul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_mul"
        app:layout_constraintBottom_toTopOf="@id/button_nine"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_div"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="operatorEvent"/>

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_seven"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_eight"
        app:layout_constraintBottom_toTopOf="@id/button_five"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_seven"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_nine"
        app:layout_constraintBottom_toTopOf="@id/button_six"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_eight"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_sub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_sub"
        app:layout_constraintBottom_toTopOf="@id/button_add"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_nine"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="operatorEvent"/>

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_four"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_five"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_four"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_six"
        app:layout_constraintBottom_toTopOf="@id/button_three"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_five"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_add"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_six"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="operatorEvent"/>

    <Button
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_one"
        app:layout_constraintBottom_toTopOf="@id/button_percent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_two"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_one"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_three"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_two"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintLeft_toRightOf="@+id/button_three"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="showResult"/>

    <Button
        android:id="@+id/button_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="percentEvent"
        android:text="@string/text_percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_percent"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/text_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintLeft_toRightOf="@+id/button_two"
        app:layout_constraintWidth_percent="0.25"
        android:onClick="clickNumber"/>

</androidx.constraintlayout.widget.ConstraintLayout>
